JDK11 support