@@ -31,8 +31,10 @@
     <properties>
         <dropwizard.version>2.0.25</dropwizard.version>
         <jersey.version>2.33</jersey.version>
-        <prometheus.version>0.12.0</prometheus.version>
         <logback.version>1.2.7</logback.version>
+        <cxf.version>3.4.5</cxf.version>
+        <shiro.version>1.8.0</shiro.version>
+        <prometheus.version>0.12.0</prometheus.version>
         <docker.directory>src/main/docker</docker.directory>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
@@ -51,8 +53,6 @@
     |           |
         </cucumber.no-versions-to-test>
         <cucumber.upgrade-versions>${cucumber.no-versions-to-test}</cucumber.upgrade-versions>
-        <cxf-version>3.4.5</cxf-version>
-        <shiro-version>1.8.0</shiro-version>
     </properties>
 
     <dependencies>
@@ -153,6 +153,10 @@
                     <groupId>javax.validation</groupId>
                     <artifactId>validation-api</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.boundary</groupId>
+                    <artifactId>high-scale-lib</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -222,17 +226,17 @@
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
-            <version>${shiro-version}</version>
+            <version>${shiro.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-web</artifactId>
-            <version>${shiro-version}</version>
+            <version>${shiro.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-jaxrs</artifactId>
-            <version>${shiro-version}</version>
+            <version>${shiro.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -266,7 +270,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -318,13 +322,13 @@
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-rs-client</artifactId>
-            <version>${cxf-version}</version>
+            <version>${cxf.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-rs-sse</artifactId>
-            <version>${cxf-version}</version>
+            <version>${cxf.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -382,47 +386,37 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${version.jdk}</source>
-                    <target>${version.jdk}</target>
+                    <release>${release.jdk}</release>
+                    <source>${build.jdk.minimum}</source>
+                    <target>${build.jdk.minimum}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <optimize>true</optimize>
                     <debug>true</debug>
-                    <compilerId>javac-with-errorprone</compilerId>
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     <showWarnings>true</showWarnings>
-                    <compilerArgument>-XepDisableWarningsInGeneratedCode</compilerArgument>
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>-XDcompilePolicy=simple</arg>
+                        <arg>-Xplugin:ErrorProne -XepDisableWarningsInGeneratedCode</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>com.google.errorprone</groupId>
+                            <artifactId>error_prone_core</artifactId>
+                            <version>2.9.0</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.plexus</groupId>
-                        <artifactId>plexus-compiler-javac-errorprone</artifactId>
-                        <version>2.8.5</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>com.google.errorprone</groupId>
-                        <artifactId>error_prone_core</artifactId>
-                        <version>2.3.3</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <!-- Make sure Java 9 classes and methods aren't accidentally used -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>animal-sniffer-maven-plugin</artifactId>
-                <configuration>
-                    <signature>
-                        <groupId>org.codehaus.mojo.signature</groupId>
-                        <artifactId>java18</artifactId>
-                        <version>1.0</version>
-                    </signature>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -518,7 +512,6 @@
                             <configLocation>checkstyle.xml</configLocation>
                             <consoleOutput>true</consoleOutput>
                             <failsOnError>true</failsOnError>
-                            <linkXRef>false</linkXRef>
                             <headerLocation>src/checkstyle/java.header</headerLocation>
                             <suppressionsLocation>src/checkstyle/suppressions.xml</suppressionsLocation>
                             <includeTestSourceDirectory>true</includeTestSourceDirectory>
@@ -660,7 +653,7 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
-              <version>2.18.1</version>
+              <version>2.22.2</version>
               <inherited>true</inherited>
               <configuration>
                   <systemPropertyVariables>
@@ -670,45 +663,6 @@
                     <io.cassandrareaper.service.SegmentRunner.sleep_time_after_postpone_in_ms>500</io.cassandrareaper.service.SegmentRunner.sleep_time_after_postpone_in_ms>
                   </systemPropertyVariables>
               </configuration>
-            </plugin>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-dependency-plugin</artifactId>
-              <executions>
-                  <execution>
-                      <phase>generate-test-resources</phase>
-                      <goals>
-                          <goal>copy</goal>
-                      </goals>
-                      <configuration>
-                        <!-- all reaper versions to test against must be listed here -->
-                        <artifactItems>
-                            <artifactItem>
-                              <groupId>io.dropwizard</groupId>
-                              <artifactId>dropwizard-testing</artifactId>
-                              <version>${dropwizard.version}</version>
-                              <destFileName>dropwizard-testing.jar</destFileName>
-                            </artifactItem>
-                            <artifactItem>
-                                <groupId>io.cassandrareaper</groupId>
-                                <artifactId>cassandra-reaper</artifactId>
-                                <version>1.2.2</version>
-                            </artifactItem>
-                            <artifactItem>
-                                <groupId>io.cassandrareaper</groupId>
-                                <artifactId>cassandra-reaper</artifactId>
-                                <version>1.3.0</version>
-                            </artifactItem>
-                            <artifactItem>
-                                <groupId>io.cassandrareaper</groupId>
-                                <artifactId>cassandra-reaper</artifactId>
-                                <version>1.4.1</version>
-                            </artifactItem>
-                        </artifactItems>
-                        <outputDirectory>${project.build.directory}/test-jars</outputDirectory>
-                      </configuration>
-                  </execution>
-              </executions>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
